# router

./: .gitignore  Cargo.toml  NEXT_CHANGELOG.md  TODO.md  licenses.html
.circleci/: config.yml
apollo-router/: Cargo.toml
apollo-router-benchmarks/: Cargo.toml  my_amazing_plan.json
apollo-router-benchmarks/benches/: basic_composition.rs  query_planning.rs
apollo-router-core/: Cargo.toml
apollo-router-core/src/: context.rs  layer.rs  plugin.rs  query_cache.rs  traits.rs
apollo-router-core/src/plugins/: forbid_mutations.rs
apollo-router-core/src/query_planner/: caching_query_planner.rs  mod.rs
apollo-router-core/src/services/: mod.rs  router_service.rs
apollo-router-core/src/spec/: fragments.rs  query.rs  schema.rs
apollo-router-core/well_known_introspection_queries/: apollo-studio-sdl.graphql
apollo-router-scaffold/: Cargo.toml
apollo-router/src/: context.rs  error.rs  lib.rs  main.rs  notification.rs  response.rs  router_factory.rs  state_machine.rs
apollo-router/src/axum_factory/: tests.rs  utils.rs
apollo-router/src/configuration/: mod.rs
apollo-router/src/plugin/: mod.rs
apollo-router/src/plugins/: external.rs  headers.rs  mod.rs  override_url.rs  rhai.rs  statsd.rs  subscription.rs
apollo-router/src/protocols/: websocket.rs
apollo-router/src/query_planner/: bridge_query_planner.rs  execution.rs  fetch.rs  mod.rs  plan.rs  subscription.rs  tests.rs
apollo-router/src/services/: execution_service.rs  mod.rs  router_service.rs  subgraph.rs  (+2 more)
apollo-router/tests/: infrastructure_tests.rs  integration_tests.rs  test_extension.rs
dockerfiles/: Dockerfile.router
dockerfiles/tracing/: docker-compose.zipkin.yml
docs/source/: _config.yml  index.mdx  migrating-from-gateway.mdx  quickstart.mdx
examples/graphql/: local.graphql
examples/mock-subgraphs/: Cargo.toml  config.yml
examples/mock-subgraphs/src/: main.rs  mock_subgraph_layer.rs  mock_subgraph_plugin.rs
test-binaries/integration-test-router/: Cargo.toml
xtask/: Cargo.toml
(+36 files in other folders)
