[package]
name = "mock-subgraphs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.54"
apollo-router = { path = "../../apollo-router" }
apollo-router-core = { path = "../../apollo-router-core" }
futures = "0.3.21"
tokio = { version = "1.16.1", features = ["full"] }
tracing = "0.1.31"
tokio-util = { git = "https://github.com/tokio-rs/tokio.git", rev = "91b9850", features = [
    "net",
    "codec",
] }
tracing-subscriber = "0.3.9"
tower = "0.4.12"
serde_json = "1.0.79"
serde = "1.0.136"
schemars = "0.8.8"
serde_json_bytes = "0.2.0"
apollo-parser = "0.2.3"

[patch.crates-io]
opentelemetry = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", rev = "6b3aa02aa" }
opentelemetry-otlp = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", rev = "6b3aa02aa" }
tokio = { git = "https://github.com/tokio-rs/tokio.git", rev = "91b9850" }
